--- a/src/assets/stylus/global.styl
+++ b/src/assets/stylus/global.styl
@@ -1,1 +1,6 @@
 // 根据项目UI规范全局设置样式，如主色调、辅色调等
+
+// [class*=van-hairline]:after
+//   border 0 solid red
+// .van-hairline--top:after
+//   border-top-width 1px
